# sonoscaner-ecg

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  EcgDataManager.cpp  EcgDataManager.h  EcgGraph.cpp  EcgGraph.h  main.cpp
test/: CMakeLists.txt  EcgDataManagerTest.h  main.cpp
test/data/: ecg-0.txt  ecg-10.txt  ecg-3.txt  testecgdata.txt
